@@ -21,6 +21,7 @@ recursive_author_tests('xt');
 requires 'Class::Utils' => 0;
 requires 'Error::Pure' => 0;
 requires 'List::Util' => 1.33;
+requires 'Mo::utils::Language' => 0.05;
 requires 'Readonly' => 0;
 requires 'Tags::HTML' => 0.08;
 requires 'Tags::HTML::Messages' => 0.09;
